# MetaxBangalore

./: .gitignore  .hfignore  Blog.md  PROJECT_LOG.md  README.md  README_model_final.md  app.py  calendar_bridge.py  cloud_test.py  env.py  generate_plot.py  generate_training_data.py  grpo_training_template.py  inference.py  kaggle_training_script.py  openenv.yaml  push_to_hf.py  pyproject.toml  requirements.txt  reward.py  run_local_server.py  scenarios.py  test_api.py  test_client.py  test_merged_env.py  test_resolve.py  train_and_eval.py  training_prompts.json
MetaxBangalore/: README.md  generate_plots.py  generate_training_data.py  grpo_training_template.py  kaggle_overnight_v3.py  kaggle_training_script.py  openenv.yaml
conflict_env/: actors.py  calendar_integration.py  constants.py  drift.py  env.py  gym_wrapper.py  llm_client.py  models.py  reward.py  scenarios.py
conflict_env/agents/: llm_agent.py
docs/: Complete_Discussion_Notes.md  ConflictEnv_Paper_Full.md  ConflictEnv_Project_Report.html  ConflictEnv_Research_Paper.md  RESOURCES_AND_MATERIALS.md  SELF_SERVE_BUILD_GUIDE.md
graphify-out/: GRAPH_REPORT.md  README.md  graph.html  graph.json
hf_space/: README.md  app.py  requirements.txt
notebooks/: ConflictEnv_GRPO_V3.ipynb  metaxbanglore.ipynb
openenv/: __init__.py
results/: battle_results.json  eval_results.json
scripts/: bridge_demo.py  fast_push.py  generate_plots.py  generate_super_dataset.py  md_to_pdf.py
server/: app.py
tests/: test_api.py  test_client.py  test_hf_integration.py  test_life_os.py  victory_check.py
training/: rewards.py
(+20 files in other folders)
